@@ -75,10 +75,13 @@ test_ReadEmptyKeyFile(void) {
 void
 test_ReadASCIIKeys(void) {
 	struct key* keys = NULL;
+	const char *path = CreatePath("key-test-ascii", INPUT_DIR);
 
-	TEST_ASSERT_EQUAL(2, auth_init(CreatePath("key-test-ascii", INPUT_DIR), &keys));
-
+	TEST_ASSERT_NOT_NULL(path);
+	TEST_ASSERT_EQUAL(2, auth_init(path, &keys));
 	TEST_ASSERT_NOT_NULL(keys);
+
+	free((void *)path);
 
 	struct key* result = NULL;
 	get_key(40, &result);
